# DBSCRN_clustering

./: .gitignore  CMakeLists.txt  DBSCRN.cpp  distance_calculations.cpp  distance_calculations.h  example_data.in  main.cpp  output.cpp  output.h  point.h  settings.h  stats.cpp  stats.h
Cpp/: Clustering  DBSCAN.cpp  DBSCAN.h  DBSCRN.cpp  DBSCRN.h  DBSCRN_clustering  README.md  csv.h  distance_calculations.cpp  main.cpp  output.cpp  output.h  point.h  settings.h  stats.cpp  stats.h
Python/: README.md  clustering_metrics.py  dbscan.py  dbscanrn.py  dbscanrn_ti.py  dbscrn.py  plot.py  plotting.py  requirements.txt  rknn.py  run.py  streamlit_app.py  utils.py
datasets/: cluto-t7-10k.txt  complex9.txt  dim512.txt  example.txt  letter.txt
results/: DEBUG_DBSCRN_cluto-t7-10k_D2_R10000_k35_minkowski2_refMin.csv  DEBUG_DBSCRN_complex9_D2_R3031_k27_minkowski2_refMin.csv  DEBUG_DBSCRN_dim512_D512_R1024_k13_minkowski2_refMin.csv  DEBUG_Opt-DBSCAN_complex9_D2_R3031_minPts27_e23.000000_minkowski2_refMin.csv  DEBUG_Opt-DBSCAN_complex9_D2_R3031_minPts27_e23.300000_minkowski2_refMin.csv  DEBUG_Opt-DBSCAN_dim512_D512_R1024_minPts13_e60.000000_minkowski2_refMin.csv  DEBUG_Opt-DBSCAN_letter_D16_R20000_minPts39_e3.600000_minkowski2_refMin.csv  DEBUG_Opt-DBSCRN_complex9_D2_R3031_k27_minkowski2_refMin.csv  DEBUG_Opt-DBSCRN_dim512_D512_R1024_k13_minkowski2_refMin.csv  OUT_DBSCRN_cluto-t7-10k_D2_R10000_k35_minkowski2_refMin.csv  OUT_DBSCRN_complex9_D2_R3031_k27_minkowski2_refMin.csv  OUT_DBSCRN_dim512_D512_R1024_k13_minkowski2_refMin.csv  OUT_DBSCRN_letter_D16_R20000_k39_minkowski2_refMin.csv  OUT_Opt-DBSCAN_complex9_D2_R3031_minPts27_e23.000000_minkowski2_refMin.csv  OUT_Opt-DBSCAN_complex9_D2_R3031_minPts27_e23.300000_minkowski2_refMin.csv  OUT_Opt-DBSCAN_dim512_D512_R1024_minPts13_e60.000000_minkowski2_refMin.csv  OUT_Opt-DBSCAN_letter_D16_R20000_minPts39_e3.600000_minkowski2_refMin.csv  OUT_Opt-DBSCRN_cluto-t7-10k_D2_R10000_k35_minkowski2_refMin.csv  OUT_Opt-DBSCRN_complex9_D2_R3031_k27_minkowski2_refMin.csv  (+13 more)
(+68 files in other folders)
